--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -1,58 +1,57 @@
---- 
+---
 schemaVersion: "1.0"
-description: 
+description:
   en: "Performs operating-system-level virtualization also known as containerization"
   fr: "Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation"
 homepageURL:
   en: "https://www.docker.com"
   fr: "https://www.docker.com"
-licenses: 
-  - 
-    URL: 
+licenses:
+  -
+    URL:
       en: "https://www.docker.com/legal/components-licenses"
       fr: "https://www.docker.com/legal/components-licenses"
     spdxID: "Apache-2.0"
-name: 
+name:
   en: "Docker"
   fr: "Docker"
-tags: 
+tags:
   en:
     - "Container platform"
     - Development
     - Infrastructure
-  fr: 
+  fr:
     - "Plate-forme de conteneur"
     - Développement
     - Infrastructure
-admininstrations: 
-  - 
+admininstrations:
+  -
     adminCode: statcan
-    uses: 
-      - 
-        contact: 
+    uses:
+      -
+        contact:
           email: "michael.goit@canada.ca"
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-13"
-        name: 
+        date:
+          started: 2019-05-06
+          metadataLastUpdated: 2019-05-13
+        name:
           en: "Development and deployment"
           fr: "Développements et Déploiements"
-        description: 
+        description:
           en: "Development and deployment process"
           fr: "Processus de développements et déploiements"
-  
-  - 
+  -
     adminCode: tbs-sct
-    uses: 
-      - 
-        contact: 
+    uses:
+      -
+        contact:
           email: "ilia.salem@tbs-sct.gc.ca"
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-13"
-        name: 
+        date:
+          started: 2019-05-06
+          metadataLastUpdated: 2019-05-13
+        name:
           en: "Development and deployment"
           fr: "Développements et Déploiements"
-        description: 
+        description:
           en: "Digital Collaboration Division development and deployment"
           fr: "Développement et déploiement de la Division de la collaboration numérique"
