--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -1,59 +1,58 @@
---- 
+---
 schemaVersion: "1.0"
-description: 
+description:
   en: "Wiki package written in PHP, originally for use on Wikipedia"
   fr: "Ensemble Wiki développé à l’origine pour Wikipédia"
 homepageURL:
   en: "https://www.mediawiki.org/wiki/MediaWiki"
   fr: "https://www.mediawiki.org/wiki/MediaWiki/fr"
-licenses: 
-  - 
-    URL: 
+licenses:
+  -
+    URL:
       en: "https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix"
       fr: "https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix"
     spdxID: "GPL-2.0"
-name: 
+name:
   en: MediaWiki
   fr: MediaWiki
-tags: 
+tags:
   en:
     - "Wiki"
     - "Web site"
-  fr: 
+  fr:
     - "Wiki"
     - "Site web"
-admininstrations: 
-  - 
+admininstrations:
+  -
     adminCode: tbs-sct
-    uses: 
-      - 
-        contact: 
-          URL: 
-            en: "https://github.com/gctools-outilsgc/gcpedia/issues" 
+    uses:
+      -
+        contact:
+          URL:
+            en: "https://github.com/gctools-outilsgc/gcpedia/issues"
             fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
           email: "ilia.salem@tbs-sct.gc.ca"
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
+        date:
+          started: 2019-05-06
+          metadataLastUpdated: 2019-05-16
+        name:
           en: "GCpedia"
           fr: "GCpedia"
-        description: 
+        description:
           en: "Internal Government of Canada Wiki"
           fr: "Wiki interne du gouvernement du Canada"
-      - 
-        contact: 
-          URL: 
-            en: "https://github.com/gctools-outilsgc/gcpedia/issues" 
+      -
+        contact:
+          URL:
+            en: "https://github.com/gctools-outilsgc/gcpedia/issues"
             fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
           email: "ilia.salem@tbs-sct.gc.ca"
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
+        date:
+          started: 2019-05-06
+          metadataLastUpdated: 2019-05-16
+        name:
           en: "GCcollab Wiki"
           fr: "Wiki GCcollab"
-        description: 
+        description:
           en: "External Government of Canada Wiki"
           fr: "Wiki externe du gouvernement du Canada"
-  
