--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -1,46 +1,45 @@
---- 
+---
 schemaVersion: "1.0"
-description: 
+description:
   en: "Text editor and Notepad replacement that runs in the Windows environment."
   fr: "Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows."
-homepageURL: 
+homepageURL:
   en: "https://notepad-plus-plus.org"
   fr: "https://notepad-plus-plus.org/fr"
-licenses: 
-  - 
-    URL: 
+licenses:
+  -
+    URL:
       en: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
       fr: "https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html"
     spdxID: "GPL-2.0"
-name: 
+name:
   en: Notepad++
   fr: Notepad++
-tags: 
-  en: 
+tags:
+  en:
     - Desktop
     - Productivity
     - "Text editor"
-  fr: 
+  fr:
     - "Poste de travail"
     - Productivité
     - "Éditeur texte"
-admininstrations: 
-  - 
+admininstrations:
+  -
     adminCode: gac-amc
-    uses: 
-      - 
-        contact: 
-          URL: 
+    uses:
+      -
+        contact:
+          URL:
             en: "https://www.international.gc.ca/"
             fr: "https://www.international.gc.ca/"
           email: sebastien.routier@international.gc.ca
-        date: 
-          started: "2019-05-06"
-          metadataLastUpdated: "2019-05-16"
-        name: 
+        date:
+          started: 2019-05-06
+          metadataLastUpdated: 2019-05-16
+        name:
           en: "Available to all employees"
           fr: "Disponible pour tous les employés"
-        description: 
+        description:
           en: "Must be requeted from the AppStore."
           fr: "Disponible au AppStore."
-  
