Added select widget & updated documentation

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -50,7 +50,10 @@ formGroups:
         title: Name
         rule: alphanum-space
   - preset: tags
-  - preset: status
+  - widget: select
+    title: Status
+    required: false
+    options: [ alpha, beta, maintained, deprecated, retired ]
   - widget: string
     title: VersionProject
     required: false
