--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -1,47 +1,81 @@
---- 
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: mtl_qc
-releases: 
-  - 
-    contact: 
-      URL: 
-        en: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
-        fr: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
+releases:
+  - contact:
+      URL:
+        en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
+        fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
       email: julio.alcantara@ville.montreal.qc.ca
-    date: 
-      created: "2014-02-14"
-      metadataLastUpdated: "2019-01-29"
-    description: 
-      en: "City of Montreal CKAN Extension"
-      fr: "Extension CKAN de la ville de Montréal"
-    languages: 
+    date:
+      created: 2014-02-14
+      metadataLastUpdated: 2019-01-29
+    description:
+      en: City of Montreal CKAN Extension
+      fr: Extension CKAN de la ville de Montréal
+    languages:
       - Python
-    name: 
+    name:
       en: CKAN-Extension-Territoire
       fr: CKAN-Extension-Territoire
-    licenses: 
-      - 
-        URL: 
-          en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt"
-          fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt"
-        spdxID: "MIT"
-    relatedCode: 
-      - 
-        URL: 
-          en: "https://github.com/ckan/ckan"
-          fr: "https://github.com/ckan/ckan"
-        name: 
+    licenses:
+      - URL:
+          en: >-
+            https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt
+          fr: >-
+            https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt
+        spdxID: MIT
+    relatedCode:
+      - URL:
+          en: 'https://github.com/ckan/ckan'
+          fr: 'https://github.com/ckan/ckan'
+        name:
           en: CKAN
           fr: CKAN
-    repositoryURL: 
-      en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
-      fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
+    repositoryURL:
+      en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire'
+      fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire'
     status: Production
-    tags: 
-      en: 
-        - "CKAN Extension"
-        - "Data Catalogue"
-      fr: 
-        - "Extension CKAN"
-        - "Catalogue de données"
+    tags:
+      en:
+        - CKAN Extension
+        - Data Catalogue
+      fr:
+        - Extension CKAN
+        - Catalogue de données
     vcs: git
+  - contact:
+      email: julio.alcantara@ville.montreal.qc.ca
+      URL:
+        en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
+        fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
+    date:
+      created: 2014-02-14
+      metadataLastUpdated: 2019-06-13
+    description:
+      en: City of Montreal CKAN Extension
+      fr: Extension CKAN de la ville de Montréal
+    name:
+      en: CKANExtensionTerritoire
+      fr: CKANExtensionTerritoire
+    licenses:
+      - URL:
+          en: 'http://www.google.com'
+          fr: 'http://www.google.com'
+        spdxID: MIT
+    repositoryURL:
+      en: 'http://www.google.com'
+      fr: 'http://www.google.com'
+    tags:
+      en:
+        - CKAN Extension
+        - Data Catalogue
+      fr:
+        - Extension CKAN
+        - Catalogue de données
+    languages:
+      - Python
+    relatedCode:
+      - URL:
+          en: CKAN
+          fr: 'https://github.com/ckan/ckan'
+    vcs: gitt
