Features/admin form (#321)
* fix errors code form

* Minor fixes

* Fixes : yaml data from forms & id errors

* Formatting dates as date instead of string in _data/code

* Formatting dates as date instead of string in _data/logiciel

* Formatting dates as date instead of string in _data/normes

* Changed date to day from testing'

* Fix yamale errors

* Added administration form page and components

* fix build

* Changed name translation (value -> option) for better consistency

* Adding comment & yml format

* Added select widget

* Added select widget & updated documentation

* Correction in form documentation

* fixed build

*  fixed build

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -50,7 +50,10 @@ formGroups:
         title: Name
         rule: alphanum-space
   - preset: tags
-  - preset: status
+  - widget: select
+    title: Status
+    required: false
+    options: [alpha, beta, maintained, deprecated, retired]
   - widget: string
     title: VersionProject
     required: false
@@ -58,4 +61,3 @@ formGroups:
     title: Vcs
     required: false
     rule: alphanum-space
-  - preset: submitter
