--- a/_data/forms/config-admin.yml
+++ b/_data/forms/config-admin.yml
@@ -4,9 +4,10 @@ id: admin
 
 formGroups:
   - preset: orgLevel
+  - widget: string
+    title: newCodeAdmin
   - widget: select
     title: ProvinceCode
-    required: false
     options: [ab, bc, mb, nb, nl, nt, ns, nu, "on", pe, qc, sk, yt] # on is a yaml/liquid/jekyll keyword and thus must be escaped
   - widget: string-i18n
     title: Name
