Added js for standard form

--- a/_data/logiciels_libres-open_source_software/airBnb-Knowledge-Repo.yml
+++ b/_data/logiciels_libres-open_source_software/airBnb-Knowledge-Repo.yml
@@ -20,7 +20,7 @@ tags:
     - "Sharing knowledge"
   fr:
     - "Partage des connaissances"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
