--- a/_data/logiciels_libres-open_source_software/airFlow.yml
+++ b/_data/logiciels_libres-open_source_software/airFlow.yml
@@ -20,7 +20,7 @@ tags:
     - "Data integration"
   fr:
     - "Intégration de données"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
