--- a/_data/logiciels_libres-open_source_software/ansible.yml
+++ b/_data/logiciels_libres-open_source_software/ansible.yml
@@ -20,7 +20,7 @@ tags:
     - "Application platform"
   fr:
     - "Plateforme applicative"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
