--- a/_data/logiciels_libres-open_source_software/apache.yml
+++ b/_data/logiciels_libres-open_source_software/apache.yml
@@ -20,7 +20,7 @@ tags:
     - "HTTP Server"
   fr:
     - "Serveur HTTP"
-admininstrations:
+administrations:
   -
     adminCode: gac-amc
     uses:
