--- a/_data/logiciels_libres-open_source_software/bokeh.yml
+++ b/_data/logiciels_libres-open_source_software/bokeh.yml
@@ -20,7 +20,7 @@ tags:
     - "Visualisation"
   fr:
     - "Visualisation"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
