--- a/_data/logiciels_libres-open_source_software/cassandra.yml
+++ b/_data/logiciels_libres-open_source_software/cassandra.yml
@@ -20,7 +20,7 @@ tags:
     - "Data base"
   fr:
     - "Base de données"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
