--- a/_data/logiciels_libres-open_source_software/debezium.yml
+++ b/_data/logiciels_libres-open_source_software/debezium.yml
@@ -20,7 +20,7 @@ tags:
     - "Incremental management of data"
   fr:
     - "Gestion incrementale des données"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
