--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -24,7 +24,7 @@ tags:
     - "Plate-forme de conteneur"
     - Développement
     - Infrastructure
-admininstrations:
+administrations:
   -
     adminCode: statcan
     uses:
