--- a/_data/logiciels_libres-open_source_software/etherpad.yml
+++ b/_data/logiciels_libres-open_source_software/etherpad.yml
@@ -24,7 +24,7 @@ tags:
     - Collaboration
     - "Éditeur texte"
     - Productivité
-admininstrations:
+administrations:
   -
     adminCode: tbs-sct
     uses:
