--- a/_data/logiciels_libres-open_source_software/firefox.yml
+++ b/_data/logiciels_libres-open_source_software/firefox.yml
@@ -24,7 +24,7 @@ tags:
     - "Navigateur Web"
     - "Poste de travail"
     - Mobile
-admininstrations:
+administrations:
   -
     adminCode: pch
     uses:
