--- a/_data/logiciels_libres-open_source_software/linux.yml
+++ b/_data/logiciels_libres-open_source_software/linux.yml
@@ -20,7 +20,7 @@ tags:
     - "Operating system kernel"
   fr:
     - "Noyau de système d'exploitation"
-admininstrations:
+administrations:
   -
     adminCode: tbs-sct
     uses:
