--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -24,7 +24,7 @@ tags:
     - "Poste de travail"
     - Productivité
     - "Éditeur texte"
-admininstrations:
+administrations:
   -
     adminCode: gac-amc
     uses:
