--- a/_data/logiciels_libres-open_source_software/php.yml
+++ b/_data/logiciels_libres-open_source_software/php.yml
@@ -20,7 +20,7 @@ tags:
     - "Programming language"
   fr:
     - "langage de programmation"
-admininstrations:
+administrations:
   -
     adminCode: gac-amc
     uses:
