--- a/_data/logiciels_libres-open_source_software/rocketchat.yml
+++ b/_data/logiciels_libres-open_source_software/rocketchat.yml
@@ -20,7 +20,7 @@ tags:
     - "Instant messaging"
   fr:
     - "Messagerie instantanée"
-admininstrations:
+administrations:
   -
     adminCode: tbs-sct
     uses:
