--- a/_data/logiciels_libres-open_source_software/angular.yml
+++ b/_data/logiciels_libres-open_source_software/angular.yml
@@ -20,7 +20,7 @@ tags:
     - "software framework"
   fr:
     - "Cadriciel"
-admininstrations:
+administrations:
   -
     adminCode: mtl_qc
     uses:
