--- a/_data/normes_ouvertes-open_standards/utf-8.yml
+++ b/_data/normes_ouvertes-open_standards/utf-8.yml
@@ -1,8 +1,7 @@
 ---
-schemaVersio: '1.0'
-admininstrations:
-  -
-    adminCode: tbs-sct
+schemaVersion: '1.0'
+administrations:
+  - adminCode: tbs-sct
     contact:
       email: ~
     references:
@@ -14,8 +13,7 @@ admininstrations:
           en: "Standard on Web Interoperability"
           fr: "Norme sur l’interopérabilité du Web"
     status: mandatory-gc
-  -
-    adminCode: bac-lac
+  - adminCode: bac-lac
     contact:
       email: ~
     references:
