Feature/fake netlify/standards form (#363)
* fix errors code form

* Minor fixes

* Fixes : yaml data from forms & id errors

* Formatting dates as date instead of string in _data/code

* Formatting dates as date instead of string in _data/logiciel

* Formatting dates as date instead of string in _data/normes

* Changed date to day from testing'

* Fix yamale errors

* Added administration form page and components

* fix build

* Changed name translation (value -> option) for better consistency

* Adding comment & yml format

* Added select widget

* Added select widget & updated documentation

* Added form for open standards

* Correction in form documentation

* fixed build

*  fixed build

* Fix build errors

* create new oss form

* Fixing conflicts

* add oss form href link in open-source-software file

* add french page of oss form

* update logiciels-libres-formulaire.html file

* Baseline for standardsform js

* Applied modifs from ossForm branch & updated doc

* Minor fix on translations for string-i18n widget

* Minor fix on translations for string-i18n widget

* Added js for standard form

* Fixing yamllint warnings

* Revert "Fixing yamllint warnings"

This reverts commit 7d2d73cc410bd7905dac5ffc05421e7d239bed6b.

* Fixing yamllint warnings

--- a/_data/normes_ouvertes-open_standards/utf-8.yml
+++ b/_data/normes_ouvertes-open_standards/utf-8.yml
@@ -1,7 +1,7 @@
 ---
-admininstrations:
-  -
-    adminCode: tbs-sct
+schemaVersion: '1.0'
+administrations:
+  - adminCode: tbs-sct
     contact:
       email: ~
     references:
@@ -13,8 +13,7 @@ admininstrations:
           en: "Standard on Web Interoperability"
           fr: "Norme sur l’interopérabilité du Web"
     status: mandatory-gc
-  -
-    adminCode: bac-lac
+  - adminCode: bac-lac
     contact:
       email: ~
     references:
