Moved to a single name for code project instead of an EN and FR value

--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -16,9 +16,7 @@ releases:
       fr: "Un logiciel polyvalent pour faire fonctionner des robots et des satellites"
     languages:
       - Java
-    name:
-      en: Apogy
-      fr: Apogy
+    name: Apogy
     licenses:
       -
         URL:
