--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -13,9 +13,7 @@ releases:
       fr: "Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route."
     languages:
       - Python
-    name:
-      en: METRo
-      fr: METRo
+    name: METRo
     licenses:
       -
         URL:
