--- a/_data/code/federal/esdc-edsc.yml
+++ b/_data/code/federal/esdc-edsc.yml
@@ -11,9 +11,7 @@ releases:
     description:
       en: "A dashboard to show expose metrics on software projects at ESDC"
       fr: "Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC"
-    name:
-      en: "AppHub"
-      fr: "HubApp"
+    name: "AppHub"
     licenses:
       -
         URL:
@@ -37,9 +35,7 @@ releases:
     description:
       en: "A .Net test app for the Code Coverage reporting dashboard"
       fr: "Une application de test .Net pour le tableau de bord de rapports de couverture de code"
-    name:
-      en: ".Net Code Coverage Demo"
-      fr: "Démo de couverture de code .Net"
+    name: ".Net Code Coverage Demo"
     licenses:
       -
         URL:
