--- a/_data/code/federal/ssc-spc.yml
+++ b/_data/code/federal/ssc-spc.yml
@@ -14,9 +14,7 @@ releases:
     languages:
       - Python
       - C
-    name:
-      en: MetPX-Sarracenia
-      fr: MetPX-Sarracenia
+    name: MetPX-Sarracenia
     licenses:
       -
         URL:
@@ -45,9 +43,7 @@ releases:
     description:
       en: "Enterprise architecture models"
       fr: "Modèles d'architecture d'entreprise"
-    name:
-      en: "GC Architecture"
-      fr: "Architecture GC"
+    name: "GC Architecture"
     licenses:
       -
         URL:
