Cleaned footer (each logical group has its own file now) + Added new logic for fetching data from code

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -5,9 +5,7 @@ id: code
 formGroups:
   - preset: schemaVersion
   - preset: adminCode
-  - widget: string
-    title: ProjectName
-    rule: alphanum-space
+  - preset: selectCode
   - preset: description
   - preset: contact
   - preset: dates
