Revert "Moved to a single name for code project instead of an EN and FR value"
This reverts commit 859427fcecca54c1e1198570a2d7395a3ce534ca.

--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -16,7 +16,9 @@ releases:
       fr: "Un logiciel polyvalent pour faire fonctionner des robots et des satellites"
     languages:
       - Java
-    name: Apogy
+    name:
+      en: Apogy
+      fr: Apogy
     licenses:
       -
         URL:
