--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -13,7 +13,9 @@ releases:
       fr: "Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route."
     languages:
       - Python
-    name: METRo
+    name:
+      en: METRo
+      fr: METRo
     licenses:
       -
         URL:
