--- a/_data/code/federal/nrc-cnrc.yml
+++ b/_data/code/federal/nrc-cnrc.yml
@@ -13,7 +13,9 @@ releases:
       fr: "Boîte à outils pour effectuer une simulation de Monte Carlo du transport du rayonnement ionisant à travers la matière"
     languages:
       - C++
-    name: EGSnrc
+    name:
+      en: EGSnrc
+      fr: EGSnrc
     licenses:
       -
         URL:
