--- a/_data/code/federal/statcan.yml
+++ b/_data/code/federal/statcan.yml
@@ -12,7 +12,9 @@ releases:
     description:
       en: "Centralize, process, and clean data"
       fr: "Centraliser, traiter et nettoyer les données"
-    name: "OpenTabulate"
+    name:
+      en: "OpenTabulate"
+      fr: "OpenTabulate"
     licenses:
       -
         URL:
