--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -14,7 +14,9 @@ releases:
     languages:
       - PHP
       - MySQL
-    name: GCconnex
+    name:
+      en: GCconnex
+      fr: GCconnex
     organization:
       en: Digital Enablement Division
       fr: Division de la mobilisation numérique
@@ -49,7 +51,9 @@ releases:
     description:
       en: "Both digital.canada.ca and numerique.canada.ca are published from this repository."
       fr: "digital.canada.ca et numerique.canada.ca sont publiés à partir de ce repository."
-    name: "CDS Website"
+    name:
+      en: "CDS Website"
+      fr: "Site Web SNC"
     organization:
       en: Canadian Digital Services
       fr: Services numériques Canadiens
@@ -75,9 +79,11 @@ releases:
       created: 2013-08-11
       metadataLastUpdated: 2019-01-31
     description:
-      en: "Web experience toolkit (WET) for building websites that are accessible, usable, interoperable, mobile friendly and multilingual"
-      fr: "Boîte à outils de l'expérience Web (BOEW) pour construire des sites Web accessibles, faciles d'emploi, interopérables, optimisés pour les appareils mobiles et multilingues"
-    name: WET-BOEW
+      en: "Building websites that are accessible, usable, interoperable, mobile friendly and multilingual"
+      fr: "Construire des sites Web accessibles, faciles d'emploi, interopérables, optimisés pour les appareils mobiles et multilingues"
+    name:
+      en: "Web Experience Toolkit (WET)"
+      fr: "Boîte à outils de l’expérience Web (BOEW)"
     licenses:
       -
         URL:
@@ -107,7 +113,9 @@ releases:
       fr: "Extension à CKAN du Gouvernement du Canada"
     languages:
       - Python
-    name: ckanext-canada
+    name:
+      en: ckanext-canada
+      fr: ckanext-canada
     organization:
       en: "Open Government"
       fr: "Gouvernement Ouvert"
@@ -147,7 +155,9 @@ releases:
       fr: "Stocker les ressources CKAN contre plusieurs fournisseurs infonuagique."
     languages:
       - Python
-    name: ckanext-cloudstorage
+    name:
+      en: ckanext-cloudstorage
+      fr: ckanext-cloudstorage
     organization:
       en: "Open Government"
       fr: "Gouvernement Ouvert"
@@ -186,7 +196,9 @@ releases:
       en: "Easy, shareable custom CKAN schemas"
     languages:
       - Python
-    name: ckanext-scheming
+    name:
+      en: ckanext-scheming
+      fr: ckanext-scheming
     organization:
       en: "Open Government"
       fr: "Gouvernement Ouvert"
@@ -225,7 +237,9 @@ releases:
       en: "Command line interface and Python module for accessing the CKAN Action API"
     languages:
       - Python
-    name: ckanapi
+    name:
+      en: ckanapi
+      fr: ckanapi
     organization:
       en: "Open Government"
       fr: "Gouvernement Ouvert"
@@ -264,7 +278,9 @@ releases:
       en: "Multilingual metadata fields for CKAN"
     languages:
       - Python
-    name: ckanext-fluent
+    name:
+      en: ckanext-fluent
+      fr: ckanext-fluent
     organization:
       en: "Open Government"
       fr: "Gouvernement Ouvert"
@@ -299,9 +315,11 @@ releases:
       created: 2017-12-31
       metadataLastUpdated: 2019-03-06
     description:
-      en: "Open Resource exchange website (the one you are currently browsing) and all the data."
-      fr: "Échange de ressource ouvert (le site web que vous naviguez présentement) et toutes les données."
-    name: Ore-Ero
+      en: "This Website and all the data."
+      fr: "Ce site Web et toutes les données."
+    name:
+      en: "Open Resource Exchange"
+      fr: "Échange de Ressource Ouvert"
     licenses:
       -
         URL:
