--- a/_data/code/provincial/ab.yml
+++ b/_data/code/provincial/ab.yml
@@ -16,7 +16,9 @@ releases:
       fr: "Extension du schéma de données utilisée dans open.alberta.ca"
     languages:
       - Python
-    name: ckanext-ab_scheming
+    name:
+      en: ckanext-ab_scheming
+      fr: ckanext-ab_scheming
     licenses:
       -
         URL:
@@ -47,7 +49,9 @@ releases:
       fr: "Extension Ckan développée pour être utilisée dans open.alberta.ca"
     languages:
       - Python
-    name: ckanext-open_alberta
+    name:
+      en: ckanext-open_alberta
+      fr: ckanext-open_alberta
     licenses:
       -
         URL:
@@ -78,7 +82,9 @@ releases:
       fr: "Extension Ckan de la carte géographique"
     languages:
       - Python
-    name: ckanext-geomapviewer
+    name:
+      en: ckanext-geomapviewer
+      fr: ckanext-geomapviewer
     licenses:
       -
         URL:
