--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -9,14 +9,7 @@ formGroups:
   - preset: description
   - preset: contact
   - preset: dates
-    created: true
-    modified: true
-    metadata: true
-  - preset: licenses
-  - preset: tags
-  - widget: string-i18n
-    title: RepositoryUrl
-    type: url
+  - preset: description
   - widget: string-i18n
     title: DownloadUrl
     type: url
@@ -26,6 +19,9 @@ formGroups:
     type: url
     required: false
   - preset: languages
+  - widget: string-i18n
+    title: ProjectName
+    rule: alphanum-space
   - widget: string-i18n
     title: Organization
     rule: alphanum-space
@@ -41,6 +37,10 @@ formGroups:
       - widget: string-i18n
         title: Name
         rule: alphanum-space
+  - preset: licenses
+  - widget: string-i18n
+    title: RepositoryUrl
+    type: url
   - widget: group
     title: RelatedCode
     required: false
@@ -51,6 +51,7 @@ formGroups:
       - widget: string-i18n
         title: Name
         rule: alphanum-space
+  - preset: tags
   - preset: status
   - widget: string
     title: VersionProject
