--- a/_data/code/provincial/bc.yml
+++ b/_data/code/provincial/bc.yml
@@ -16,7 +16,9 @@ releases:
       fr: "Application Échange de développeurs C.-B."
     languages: 
       - Python
-    name: Devex
+    name: 
+      en: Devex
+      fr: Devex
     licenses: 
       - 
         URL: 
@@ -51,7 +53,9 @@ releases:
       fr: "https://apps.nrs.gov.bc.ca/gwells/"
     languages: 
       - JavaScript
-    name: gwells
+    name: 
+      en: gwells
+      fr: gwells
     licenses: 
       - 
         URL: 
@@ -87,7 +91,9 @@ releases:
       fr: "https://developer.gov.bc.ca/"
     languages: 
       - JavaScript
-    name: devhub-app-web
+    name: 
+      en: devhub-app-web
+      fr: devhub-app-web
     licenses: 
       - 
         URL: 
@@ -123,7 +129,9 @@ releases:
       fr: "http://catalogue.data.gov.bc.ca"
     languages: 
       - Python 
-    name: ckanext-bcgov
+    name: 
+      en: ckanext-bcgov
+      fr: ckanext-bcgov
     licenses: 
       - 
         URL: 
